[project]
name = "apache-age"
version = "0.0.3"
authors = [
  { name="Apache" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License v2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/apache/age/tree/master/drivers/python"
"Bug Tracker" = "https://github.com/apache/age/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"