[project]
name = "apache-age"
version = "0.0.5"
authors = [
  { name="Apache" },
]
description = "Python driver support for Apache AGE"
readme = "README.md"
license = {file = 'LICENSE'}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "keywords", "license"]

[project.urls]
"Homepage" = "https://github.com/apache/age/tree/master/drivers/python"
"Bug Tracker" = "https://github.com/apache/age/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"